--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Chicken curry don't worry! 
+title: CHCIKEN CURRY! 
 author: Sunidhs
 email: itsmee@domain.com
 description: > # this means to ignore newlines until "baseurl:"
